# ontosys

./: .gitignore  ARCHITECTURE.md  PRD.md  README.md  SETUP.md  START_SERVERS.md  docker-compose.yml  sample-rfp.txt  start.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: documents.py  extraction.py  graph.py
backend/app/core/: config.py  neo4j_client.py
backend/app/models/: schemas.py
backend/app/services/: document_service.py  extraction_service.py  graph_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: client.js
frontend/src/components/: AggregateNode.vue  CommandNode.vue  EventNode.vue  GraphCanvas.vue  PolicyNode.vue  UploadPanel.vue
frontend/src/stores/: graphStore.js
sample-requirement/: online-shopping.txt
